# add all the sources needed
sources += [
    # data structures
    'Volts/PS3/Util/SFO.cpp',
    'Volts/PS3/Util/Decrypt/UNSELF.cpp',
    'Volts/PS3/Util/Decrypt/Keys.cpp',
    'Volts/PS3/Util/Decrypt/AES/aes.cpp',
    'Volts/PS3/Util/PUP.cpp',

    # CPU and memory stuff
    'Volts/PS3/VM/VM.cpp',
    'Volts/PS3/VM/Memory/Memory.cpp',
    'Volts/PS3/VM/Interpreter/PPUInterpreter.cpp',

    # GPU stuff
    'Volts/PS3/VM/Render/Vulkan/Render.cpp',
    'Volts/PS3/VM/Render/Frame.cpp',
]

# add this directory to the include paths
incs += include_directories('../')